Fix to distortion of Maastricht logo on mobile website

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -366,6 +366,7 @@ section {
 
 .pillar-container {
   display: flex;
+  text-align: center;
 }
 
 .pillar-container > div {
@@ -422,12 +423,14 @@ b {
 
 @media screen and (max-width: 600px) {
   .partnerlogo {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
   }
 }
 
 .partnerlogo img {
-  height: 100%;
+  max-height: 100%;
 }
